make slight adjustment

--- a/frontend/appchara-admin/src/App.css
+++ b/frontend/appchara-admin/src/App.css
@@ -12,7 +12,7 @@
     margin: 5px 0;
 }
 
-.active{
+.side-nav-active{
     padding: 10px 0 5px 7px;
     border-radius: 22px;
     background-color: #f5f6fa;
